--- a/5.04.2023/index.html
+++ b/5.04.2023/index.html
@@ -41,11 +41,11 @@
           Zakończenia:<input id="dataz" type="date" />
         </fieldset>
 
-        <input type=submit></input>
+        <input type=submit id="indexbtn"></input>
       </form>
     </section>
     <section>
-      <div class="display"> 
+      <div class="indexdisplay"> 
         
       </div>
        
